--- a/Client/vercel.json
+++ b/Client/vercel.json
@@ -2,14 +2,17 @@
     "version": 2,
     "builds": [
         {
-            "src": "./App.jsx",
-            "use": "@vercel/node"
+            "src": "index.html",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "dist"
+            }
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/index.html"
         }
     ]
 }
