--- a/Client/package.json
+++ b/Client/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/styled-engine-sc": "^6.3.1",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.4",
     "js-cookie": "^3.0.5",
+    "pnpm": "^9.15.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
