--- a/Server/package.json
+++ b/Server/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
