--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.3.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.4",
+    "framer-motion": "^12.0.6",
     "js-cookie": "^3.0.5",
     "pnpm": "^9.15.4",
     "react": "^18.3.1",
